style.css
/*
 Theme Name:   KSAS Blocks Custom Posts
 Theme URI:    https://krieger.jhu.edu
 Description:  Child theme of KSAS Blocks. Use for sites with custom post type archives.
 Author:       KSAS Communications
 Author URI:   https://github.com/ksascomm
 Template:     ksas-blocks
 Version:      1.0.0
 License:      GNU General Public License v2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:  ksas-blocks-custom-posts
*/

/* General Styles
--------------------------------------------- */
.opacity-0 {
  opacity: 0;
}

.cursor-pointer {
  cursor: pointer;
}

.leading-normal {
  line-height: 1.5;
}

.capitalize {
  text-transform: capitalize;
}

@media (min-width: 768px) {
  .md\:w-1\/3 {
    width: 33.333333%;
  }
  .md\:flex-row {
    flex-direction: row;
  }
}

.justify-around {
  justify-content: space-around;
}

input[type="color"],
input[type="date"],
input[type="datetime"],
input[type="email"],
input[type="number"],
input[type="password"],
input[type="search"],
input[type="text"],
input[type="time"],
input[type="url"] {
  border: 1px solid #d6d6d6;
  border-radius: 3px;
  color: #31261d;
  padding: 3px;
}

.w-3\/4 {
  width: 75%;
}

.mt-8 {
  margin-top: 2rem;
}

.p-6 {
  padding: 1.5rem;
}

.max-w-sm {
  max-width: 24rem;
}

@media (min-width: 768px) {
  .md\:float-left {
    float: left;
  }
}

.h-80 {
  height: 20rem;
}

/* Accordion Tabs
--------------------------------------------- */

.tab {
  border: 1px solid #e6e6e6;
}
/* Tab content - closed */
.tab-content {
  max-height: 0;
  -webkit-transition: max-height 0.35s;
  -o-transition: max-height 0.35s;
  transition: max-height 0.35s;
}
/* :checked - resize to full height */
.tab input:checked ~ .tab-content {
  max-height: 100vh;
}
/* Label formatting when open */
.tab input:checked + label {
  /*@apply text-xl p-5 border-l-2 border-blue-500 bg-gray-100 text-indigo*/
  font-size: 1.25rem; /*.text-xl*/
  padding: 1.25rem; /*.p-5*/
  border-left-width: 2px; /*.border-l-2*/
  border-color: #002d72; /*.border-blue*/
  background-color: #f8fafc; /*.bg-gray-100 */
  color: #002d72; /*.text-blue*/
}
/* Icon */
.tab label::after {
  float: right;
  right: 0;
  top: 0;
  display: block;
  width: 1.5em;
  height: 1.5em;
  line-height: 1.5;
  font-size: 1.25rem;
  text-align: center;
  -webkit-transition: all 0.35s;
  -o-transition: all 0.35s;
  transition: all 0.35s;
}
/* Icon formatting - closed */
.tab input[type="checkbox"] + label::after {
  content: "+";
  font-weight: bold; /*.font-bold*/
  border-width: 1px; /*.border*/
  border-radius: 9999px; /*.rounded-full */
  border-color: #b8c2cc; /*.border-grey*/
}
.tab input[type="radio"] + label::after {
  content: "\25BE";
  font-weight: bold; /*.font-bold*/
  border-width: 1px; /*.border*/
  border-radius: 9999px; /*.rounded-full */
  border-color: #b8c2cc; /*.border-grey*/
}
/* Icon formatting - open */
.tab input[type="checkbox"]:checked + label::after {
  transform: rotate(315deg);
  background-color: #002d72; /*.bg-indigo*/
  color: #f8fafc; /*.text-grey-lightest*/
}
.tab input[type="radio"]:checked + label::after {
  transform: rotateX(180deg);
  background-color: #002d72; /*.bg-indigo*/
  color: #f8fafc; /*.text-grey-lightest*/
}

.tab-content > * {
  padding-left: 1.25rem; /*.p-5*/
  padding-right: 1.25rem; /*.p-5*/
}

/* Documents
--------------------------------------------- */
.documents {
  margin-bottom: -3rem !important;
  padding-bottom: 3rem;
}

.documents > h3 {
  max-width: 75ch;
  margin-left: auto;
  margin-right: auto;
}

.documents .tab {
  background-color: #fefefe;
  max-width: 100ch;
  margin-left: auto;
  margin-right: auto;
}

/* Isotope
--------------------------------------------- */
.isotope-to-sort a.button {
  margin: 0 0.25rem;
  text-align: center;
  font-family: Gentona-SemiBold, system-ui, BlinkMacSystemFont, -apple-system,
    Segoe UI, sans-serif;
  vertical-align: text-bottom;
  line-height: 1.2;
}

.site-main .isotope-to-sort a {
  color: inherit;
}

.isotope-to-sort a.all.button {
  --tw-text-opacity: 1;
  color: rgba(254, 254, 254, var(--tw-text-opacity));
}

.isotope-to-sort a.all.button:hover {
  --tw-text-opacity: 1;
  color: rgba(49, 38, 29, var(--tw-text-opacity));
}

.isotope-to-sort a.button {
  color: #fefefe;
  border-bottom: 0;
}

.isotope-to-sort a.button.is-checked {
  background-color: #68ace5;
  color: #31261d;
}

/* Research Projects
--------------------------------------------- */
.research-project-card-outline {
  border-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(237, 242, 247, var(--tw-border-opacity));
  /* hex: #edf2f7*/
  --tw-shadow: 0 0 #0000;
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.research-project-card ul {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  padding-inline-start: 0px;
}

.research-project-card ul > li {
  padding-left: 0;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  line-height: 1.2;
}

.research-project-card ul > li::before {
  content: none;
}

.research-project-card p {
  margin-top: 0.5rem;
  margin-bottom: 0;
}

.research-project-card h3 {
  font-size: 1.25rem;
}

/* Graduate Field of Study
--------------------------------------------- */
.graduate-field-card-outline {
  border-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(237, 242, 247, var(--tw-border-opacity));
  /* hex: #edf2f7*/
  --tw-shadow: 0 0 #0000;
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.graduate-field-card ul {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  padding-inline-start: 0px;
}

.graduate-field-card ul > li {
  padding-left: 0;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  line-height: 1.2;
}

.graduate-field-card ul > li::before {
  content: none;
}

.graduate-field-card p {
  margin-top: 0.5rem;
  margin-bottom: 0;
}

.graduate-field-card h3 {
  font-size: 1.5rem;
}

.graduate-field-card dd {
  line-height: 1.5;
}

/* Testimonials/Profiles
--------------------------------------------- */
.single-profile .profile img.wp-post-image {
  margin-right: 1.5rem;
  margin-bottom: 1.5rem;
}

